# Server

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: build-rust.yml  lint.yml  test.yml
src/: README.md  cli.rs  main.rs  server.rs
src/command/: README.md  args.rs  cli.rs  mod.rs  run.rs
src/db/: README.md  db.rs  db_struct.rs  get.rs  mod.rs  set.rs  utils.rs
src/routes/: README.md
src/server/: README.md  mod.rs
src/server/routes/: README.md  get.rs  set.rs
src/server/utils/: README.md  request.rs  response.rs
src/tests/: db.rs  mod.rs  server.rs
src/utils/: README.md  request.rs
