[dependencies]
structopt = "0.3.21"
serde = { version = "1", features = ["derive"] }
bincode = "1"
dirs = "*"

[package]
name = "akdb-server"
version = "0.1.0"
authors = ["Brian3647 <victoris3647@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple DataBase sistem made in rust"
readme = "README.md"
homepage = "https://github.com/Ak-DataBase/AkDB"
repository = "https://github.com/Ak-DataBase/AkDB"
keywords = ["db", "database"]
categories = ["database-interfaces"]
edition = "2018"
